add flagExpenseTest(), and create ExpenseListViewActivity and context menu

--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_edit_claim">EditClaimActivity</string>
     <string name="title_activity_edit_expense">EditExpenseActivity</string>
     <string name="title_activity_approver">ApproverActivity</string>
+    <string name="title_activity_expense_list_view">ExpenseListViewActivity</string>
 
 </resources>
