Made some minor changes to spelling errors

--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="Claim">Claims:</string>
     <string name="NewClaim">Add New Claim</string>
     <string name="User">User</string>
-    <string name="Aprover">Aprover</string>
+    <string name="Approver">Approver</string>
     <string name="StartDate">Start</string>
     <string name="Name">Name</string>
     <string name="Add">Add</string>
