--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="Description">Description</string>
     <string name="Claim">Claims:</string>
     <string name="NewClaim">Add New Claim</string>
-    <string name="User">User</string>
+    <string name="User">Username</string>
     <string name="Approver">Approver</string>
     <string name="StartDate">Start</string>
     <string name="Name">Name</string>
@@ -56,5 +56,7 @@
         <item >CNY</item>
         <item >CHF</item>
     </string-array>
+    <string name="Login">Login</string>
+    <string name="Password">Password</string>
 
 </resources>
