Finish most of the navigation and added date picker for date input

--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="Ok">OK</string>
     <string name="Tags">Tags</string>
     <string name="Search">Search</string>
+    <string name="Start">Start</string>
+    <string name="Finish">Finish</string>
 
     <string-array name="StatusArray">
         <item>In Progress</item>
