--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="title_activity_expense_list">ExpenseListActivity</string>
     <string name="AddButton">Add</string>
     <string name="TagListTitle">Tags:</string>
+    <string name="SearchHint">Eg. Food, Hotel, Taxi</string>
 
 </resources>
