Creating new and improved UI

--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="View">View Expenses</string>
     <string name="CurrentExpense">Current Expenses:</string>
     <string name="Des">Add Destination</string>
+    <string name="Welcome">Welcome to the travel claims app.   Please login to continue</string>
 
     <string-array name="StatusArray">
         <item>In Progress</item>
