Fixed UI changes that caused huge error before

--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -36,6 +36,8 @@
     <string name="View">View Expenses</string>
     <string name="CurrentExpense">Current Expenses:</string>
     <string name="Des">Add Destination</string>
+    <string name="Welcome">Welcome to the Travel Claims App.  Please login in to continue.</string>
+    <string name="Register">Register</string>
 
     <string-array name="StatusArray">
         <item>In Progress</item>
