add welcome screen with sound effect and change the icon with new designed icon

--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -76,5 +76,6 @@
     <string name="TagListTitle">Tags:</string>
     <string name="SearchHint">Eg. Food, Hotel, Taxi</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
 
 </resources>
