UI fully implemented. still need text colour correcting

--- a/TravelClaimsApp/res/values/strings.xml
+++ b/TravelClaimsApp/res/values/strings.xml
@@ -85,5 +85,7 @@
     <string name="title_activity_map">MapActivity</string>
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="title_activity_approver_expense_list">ApproverExpenseListActivity</string>
+    <string name="title_activity_des_tab">DesTabActivity</string>
+    <string name="title_activity_tag_tab">TagTabActivity</string>
 
 </resources>
